[metadata]
name = ansible-vault-decrypt
description = Ansible Vault Decrypt app.
long_description_content_type = text/markdown
url = https://github.com/psvmcc/ansible-vault-decrypt
project_urls =
    Bug Tracker = https://github.com/psvmcc/ansible-vault-decrypt/issues
    Changelog = https://github.com/psvmcc/ansible-vault-decrypt/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ansible-core

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ansible-vault-decrypt = ansible_vault_decrypt.app:entry_point
